# hermes-desktop

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json
public/vrm/: think.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/contexts/: I18nContext.tsx  ThemeContext.tsx
src/i18n/: en.json  zh-CN.json  zh-XG.json
src/styles/: index.css  themes.css
src/windows/: AvatarWindow.css  AvatarWindow.tsx  ChatWindow.css  ChatWindow.tsx  GestureEditor.css  GestureEditor.tsx  InstallGuide.css  InstallGuide.tsx  MainWindow.css  MainWindow.tsx
