[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Desktop - AI Assistant with Live2D Avatar"
authors = ["Peng Baowei"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
