[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Desktop - AI Assistant with Live2D Avatar"
authors = ["Peng Baowei"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
urlencoding = "2.1.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
base64 = "0.22"
